[package]
name = "actix-web-learning"
version = "0.1.0"
authors = ["Youngermaster <juanmanuel12.13jmyh81@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-rt = "2.2.0"
serde = "1.0.125"